--- a/notebooks/pop_MOCsig2_0.1deg.ipynb
+++ b/notebooks/pop_MOCsig2_0.1deg.ipynb
@@ -3090,9 +3090,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:miniconda3-POP_MOC]",
+   "display_name": "CMIP6 2019.10",
    "language": "python",
-   "name": "conda-env-miniconda3-POP_MOC-py"
+   "name": "cmip6-201910"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3104,7 +3104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
